[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Shields/EnergyShield.gd" type="Script" id=1]
[ext_resource path="res://src/Shields/animated_sprites/shield_0000_animated_sprite.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=12]
radius = 45.0
height = 28.0

[node name="EnergyShield" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
